Thu Apr 30 16:22:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lambda): push and reset cmdarg_stack in lambda body.
	  [ruby-core:69017] [Bug #11107]

Sun Apr 26 07:36:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/utf_8.c (code_to_mbclen, code_to_mbc): reject values larger
	  than UTF-8 max codepoints.  [Feature #11094]

Sat Apr 25 14:26:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): expand later so that the buffer can be
	  larger for further use.  [Bug #11080] [Bug #11095]

Fri Apr 24 23:48:45 2015  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import version 2.2.3 from
	  https://github.com/knu/ruby-electric.el.

Fri Apr 24 10:40:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_{getc,putc}): removed.  they are needed for old
	  ruby (before 1.8), but not now.

Fri Apr 24 08:40:13 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c: remove bcc related code.

	* include/ruby/win32.h: ditto.

Fri Apr 24 08:21:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (rb_acrt_lowio_lock_fh): wrap _pioinfo(i)->lock.

	* win32/win32.c (rb_acrt_lowio_unlock_fh): ditto.

Fri Apr 24 06:47:19 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (_filbuf): msvc14 doesn't have it, use _fgetc_nolock.

	* win32/win32.c (_flsbuf): msvc14 doesn't have it, use _fputc_nolock.

	* win32/win32.c (vcruntime_file): define vcruntime_file on msvc14
	  because it doesn't export FILE's internal structure.

	* win32/win32.c (FILE_COUNT): added to abstract FILE->_cnt.

	* win32/win32.c (FILE_READPTR): added to abstract FILE->_ptr.

	* win32/win32.c (FILE_FILENO): added to abstract FILE->_file.

	* win32/win32.c (init_stdhandle): use FILE_FILENO.

	* win32/win32.c (rb_w32_getc): use FILE_COUNT and FILE_READPTR.

	* win32/win32.c (rb_w32_putc): ditto.

Fri Apr 24 06:37:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (dupfd): use _set_osfhnd.
